2009-03-02  Alan Modra  <amodra@bigpond.net.au>

	2009-02-05  Peter Bergner  <bergner@vnet.ibm.com>
	* gas/ppc/booke.s ("dcbt", "dcbtst"): New tests.
	* gas/ppc/booke.d: Likewise.
	* gas/ppc/power4_32.s: Likewise.
	* gas/ppc/power4_32.d: Likewise.

	2009-01-14  Peter Bergner  <bergner@vnet.ibm.com>
	* gas/ppc/power6.s ("mtfsf", "mtfsf.", "mtfsfi", "mtfsfi."): Add tests.
	* gas/ppc/power6.d: Likewise.

	2008-12-04  Ben Elliston  <bje@au.ibm.com>
	* gas/ppc/booke.s: Remove booke64 instructions.
	* gas/ppc/booke.d: Update expected disassembly output.
	* gas/ppc/booke_xcoff.s: Use -mbooke/-Mbooke.
	* gas/ppc/booke_xcoff.d: Likewise.
	* gas/ppc/booke_xcoff64.d: Likewise.
	* gas/ppc/booke_xcoff64.s: Likewise.

	2008-09-09  Peter Bergner  <bergner@vnet.ibm.com>
	* gas/ppc/common.s: New test.
	* gas/ppc/common.d: Likewise.
	* gas/ppc/power4_32.s: Likewise.
	* gas/ppc/power4_32.d: Likewise.
	* gas/ppc/power6.s: Add attn, mtcr, mtcrf, mfcr, dcbz.
	* gas/ppc/power6.d: Likewise.
	* gas/ppc/ppc.exp: Run power4_32 test.

2009-01-08  Adam Nemet  <anemet@caviumnetworks.com>

	* gas/mips/mips1-fp.s, gas/mips/mips1-fp.d, gas/mips/mips1-fp.l:
	New tests.
	* gas/mips/mips.exp: Run them.

2008-09-15  Alan Modra  <amodra@bigpond.net.au>

	* gas/all/gas.exp: Don't run redef tests on a bunch of targets.
	* gas/elf/elf.exp: Likewise.

2008-09-06  Richard Sandiford  <rdsandiford@googlemail.com>

	* gas/mips/cfi-n64-1.s, gas/mips/cfi-n64-1.d: New test.
	* gas/mips/mips.exp: Run it.

2008-09-05  Nick Clifton  <nickc@redhat.com>

	* gas/arm/abs12.d: Update expected disassembly.
	* gas/arm/tls_vxworks.d: Likewise.
	* gas/arm/unwind_vxworks.d: Likewise.
	* gas/arm/group-reloc-alu-encoding-bad.d: Skip for vxworks
	targets.
	* gas/arm/group-reloc-alu.d: Likewise.
	* gas/arm/group-reloc-ldc-encoding-bad.d: Likewise.
	* gas/arm/group-reloc-ldc.d: Likewise.
	* gas/arm/group-reloc-ldr-encoding-bad.d: Likewise.
	* gas/arm/group-reloc-ldr.d: Likewise.